--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
+
 /*
 Colors
 -------
@@ -16,13 +21,25 @@ Cinza escuro rgb(37, 49, 49)
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased !important;
     font-size: 14px;
-    font-family: 'Helvetica', 'Verdana', sans-serif;
+    font-family: 'Lato', 'Helvetica', 'Verdana', sans-serif;
     line-height: 1;
 }
 body {
     background: #FFFFFF;
     color: #202020;
     padding-top: 48px;
+}
+
+.section-content {
+    min-height: 100vh;
+}
+.section-title {
+    font-family: 'Maven Pro';
+    font-weight: 700;
+    letter-spacing: 0.3rem;
+}
+.section-subtitle {
+    font-family: 'Source Code Pro';
 }
 
 section#nav {
@@ -45,10 +62,10 @@ nav#navbar {
 }
 #navbar-logo a {
     text-decoration: none;
-    color: rgb(223, 239, 238);
-    font-size: 28px;
-    font-weight: bold;
-    font-family: 'Good Times';
+    color: rgb(255, 255, 255);
+    font-size: 36px;
+    font-family: 'Maven Pro';
+    font-weight: 700;
 }
 #navbar-links a {
     text-decoration: none;
@@ -58,5 +75,12 @@ nav#navbar {
     transition: all 300ms;
 }
 #navbar-links a:hover {
+    background: rgba(37, 49, 49, 0.5);
+}
+
+/* Footer */
+#footer {
     background: rgb(37, 49, 49);
+    color: rgb(223, 239, 238);
+    font-family: 'Source Code Pro';
 }
