--- a/assets/style.css
+++ b/assets/style.css
@@ -27,7 +27,6 @@ Cinza escuro rgb(37, 49, 49)
 body {
     background: #FFFFFF;
     color: #202020;
-    padding-top: 48px;
 }
 
 .section-content {
@@ -76,6 +75,63 @@ nav#navbar {
 }
 #navbar-links a:hover {
     background: rgba(37, 49, 49, 0.5);
+}
+
+/* Home */
+#home {
+    position: relative;
+    z-index: 1;
+    background-image: url('../images/home.jpg');
+    background-attachment: fixed;
+    background-position: top right;
+    background-size: cover;
+}
+#home:before {
+    position: absolute;
+    z-index: 10;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
+}
+#home-into {
+    position: relative;
+    z-index: 100;
+}
+@media (max-width: 700px) {
+    #home {
+        background-attachment: unset;
+        background-position: top left 60%;
+    }
+}
+.social-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.social-buttons a {
+    text-decoration: none;
+    background: rgb(37, 49, 49);
+    color: #FFFFFF;
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    transition: all 300ms;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+}
+.social-buttons a:hover {
+    background: rgb(17, 148, 200);
+}
+.social-buttons a svg {
+    height: 24px;
+    padding-left: 1px;
 }
 
 /* Footer */
