--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /* Fonts */
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
 
@@ -21,7 +21,7 @@ Cinza escuro rgb(37, 49, 49)
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased !important;
     font-size: 14px;
-    font-family: 'Lato', 'Helvetica', 'Verdana', sans-serif;
+    font-family: 'Roboto', 'Helvetica', 'Verdana', sans-serif;
     line-height: 1;
 }
 body {
@@ -94,7 +94,7 @@ nav#navbar {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2));
 }
 #home-into {
     position: relative;
@@ -106,16 +106,16 @@ nav#navbar {
         background-position: top left 60%;
     }
 }
-.social-buttons {
+#social-buttons {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
 }
-.social-buttons a {
+#social-buttons a {
     text-decoration: none;
-    background: rgb(37, 49, 49);
-    color: #FFFFFF;
+    background: #FFFFFF;
+    color: rgb(37, 49, 49);
     height: 36px;
     width: 36px;
     border-radius: 50%;
@@ -126,10 +126,10 @@ nav#navbar {
     align-items: center;
     margin-right: 8px;
 }
-.social-buttons a:hover {
-    background: rgb(17, 148, 200);
+#social-buttons a:hover {
+    background: rgb(223, 239, 238);
 }
-.social-buttons a svg {
+#social-buttons a svg {
     height: 24px;
     padding-left: 1px;
 }
